--- a/react/package.json
+++ b/react/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "rc-slider": "^11.1.8",
     "react-redux": "^9.2.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
