--- a/react/package.json
+++ b/react/package.json
@@ -30,6 +30,7 @@
     "@vitejs/plugin-react": "^4.4.1",
     "bootstrap": "^5.3.6",
     "d3": "^7.9.0",
+    "d3-array": "^3.2.4",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
