--- a/react/package.json
+++ b/react/package.json
@@ -25,8 +25,10 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.80.7",
     "@types/d3": "^7.4.3",
+    "@types/lodash": "^4.17.19",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.4.1",
     "bootstrap": "^5.3.6",
     "d3": "^7.9.0",
@@ -36,10 +38,12 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "lodash": "^4.17.21",
     "rc-slider": "^11.1.8",
     "react-redux": "^9.2.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
+    "uuid": "^11.1.0",
     "vite": "^6.3.5"
   }
 }
