--- a/sam/package.json
+++ b/sam/package.json
@@ -6,14 +6,17 @@
     "deploy": "sam build; sam deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.835.0",
     "@aws-sdk/client-dynamodb": "^3.828.0",
     "@aws-sdk/lib-dynamodb": "^3.828.0",
     "@aws-sdk/util-dynamodb": "^3.828.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.150",
     "@types/lodash": "^4.17.17",
     "@types/node": "^24.0.3",
+    "aws-lambda": "^1.0.7",
     "typescript": "^5.8.3"
   }
 }
