--- a/react/.env
+++ b/react/.env
@@ -1,1 +1,3 @@
 VITE_ELO_API_BASE=https://9c9a3ip95d.execute-api.us-east-1.amazonaws.com/Prod
+VITE_AUTH0_DOMAIN=dev-cvviyk1ewbdlxtcc.us.auth0.com
+VITE_AUTH0_CLIENT_ID=Np0DKpoOLEnyi8mupOx1V5ierOgLyclY
