--- a/react/package.json
+++ b/react/package.json
@@ -21,12 +21,13 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@eslint/js": "^9.25.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.80.7",
     "@types/d3": "^7.4.3",
     "@types/lodash": "^4.17.19",
-    "@types/react": "^19.1.2",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.2",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.4.1",
