--- a/react/package.json
+++ b/react/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "aws s3 sync dist/ s3://prioritizationapp3-theprioritizationappwebsitebuck-un0on2fsgajb --delete",
+    "invalidate": "aws cloudfront create-invalidation --distribution-id E14ZBAN6J9GBUZ --paths \"/*\""
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
